--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,15 @@
     <groupId>com.qa</groupId>
     <artifactId>accountapplication</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20180813</version>
+        </dependency>
+
+    </dependencies>
 
 
 </project>
